# candlery

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
candlery/: __main__.py  cli.py
config/: example_backtest.yaml  example_paper.yaml  example_paper_udiff_2026-04-07_to_2026-05-04.yaml  example_paper_udiff_2026-04-28_to_2026-05-04.yaml  example_paper_udiff_2026-05-04.yaml  example_paper_udiff_final_w1.yaml  example_paper_udiff_final_w2.yaml  example_paper_udiff_final_w3.yaml  example_paper_udiff_final_w4.yaml  example_paper_udiff_final_w5.yaml  example_paper_udiff_final_w6.yaml  example_paper_udiff_final_w7.yaml  example_paper_udiff_final_w8.yaml  example_paper_udiff_gate_liquid50.yaml  example_paper_udiff_gate_w1.yaml  example_paper_udiff_gate_w2.yaml  example_paper_udiff_gate_w3.yaml  example_paper_udiff_roll_liquid50_w1.yaml  example_paper_udiff_roll_liquid50_w2.yaml  example_paper_udiff_roll_liquid50_w3.yaml  example_paper_udiff_roll_liquid50_w4.yaml  example_paper_udiff_roll_liquid50_w5.yaml  example_paper_udiff_roll_w1.yaml  example_paper_udiff_roll_w2.yaml  example_paper_udiff_roll_w3.yaml  example_paper_udiff_roll_w4.yaml  example_paper_udiff_roll_w5.yaml  example_paper_udiff_w1_2026-04-07_to_2026-04-20.yaml  example_paper_udiff_w2_2026-04-21_to_2026-05-04.yaml  risk_defaults.yaml
docs/: CONSTITUTION.md
scripts/: check_commit_identity.sh  fetch_and_normalize_recent.py  fetch_bhavcopy.py  forward_context_features.py  normalize_udiff_cm_to_legacy.py
tests/: test_cli.py  test_phase1a_smoke.py
(+78 files in other folders)
